Skip to content

stream: do not probe from non-zero offset

Even if #18501 (closed) were fixed, a demuxer might still get to probe a stream from non-zero offset. This can occur if another demuxer plugin with higher priority encounters an error while probing.

Any further demuxer probing will not work properly. And the stream is most probably unusable due to I/O errors. So demuxer probing should be aborted.

(This is blocked by #18501 (closed).)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information